test_programs/compile_failure/break_in_infix/src/main.nr
unconstrained fn main() {
    let _ = 1 + { break; };
}
